phase2/k8s/03-tier2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
  labels:
    app: backend
    tier: tier2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: tier2
  template:
    metadata:
      labels:
        app: backend
        tier: tier2
    spec:
      serviceAccountName: ksa-app-backend
      containers:
        - name: api-app
          image: us-east4-docker.pkg.dev/practice-502506/devops-portfolio/app-p2:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.1
          args:
            - "--structured-logs"
            - "--port=5432"
            - "practice-502506:us-east4:cloudsql-3tier-db"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: backend
    tier: tier2
  ports:
    - port: 8080
      targetPort: 8080
